<resources>
    <string name="app_name">Moon Calculator</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="PlusMinus">+/-</string>
    <string name="percent">%</string>
    <string name="backspace"></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="display">Enter in a value </string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //written by @ali
    //converter
    <string name="accelerationFragmentTitle">Acceleration</string>
    <string name="angleFragmentTitle">Angle</string>
    <string name="areaFragmentTitle">Area</string>
    <string name="dataStorageFragmentTitle">DataStorage</string>
    <string name="dataTransferRateFragmentTitle">DataTransfer Rate</string>
    <string name="energyFragmentTitle">Energy</string>
    <string name="forceFragmentTitle">Force</string>
    <string name="lengthFragmentTitle">Length</string>
    <string name="massFragmentTitle">Mass</string>
    <string name="speedFragmentTitle">Speed</string>
    <string name="timeFragmentTitle">Time</string>
    //main
    <string name="basicFragmentTitle">Basic</string>
    <string name="expertFragmentTitle">Expert</string>
    <string name="equationFragmentTitle">Equation</string>

    <string name="title_activity_main2">MainActivity</string>

    //scientific
    <string name="Sclear" >C</string>
    <string name="parantez">()</string>
    <string name="dividedByOne">1/X</string>
    <string name="Sbackspace"></string>
    <string name="OnThePowerOfTwo">x^2</string>
    <string name="OnThePowerOfN">X^n</string>
    <string name="radicalrishe2">√x</string>
    <string name="radicalN">n√x</string>
    <string name="Sin">sin</string>
    <string name="Cos">cos</string>
    <string name="Tan">Tan</string>
    <string name="Round">round</string>
    <string name="DivideBySin">1/sin</string>
    <string name="DivideByCos">1/cos</string>
    <string name="DivideByTan">1/Tan</string>
    <string name="AbsoluteValue">|X|</string>
    <string name="Neper">e</string>
    <string name="NeperOnThePowerOfX">e^x</string>
    <string name="pi">π</string>
    <string name="fact">X!</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="logaritm">log</string>
    <string name="ln">ln</string>

    //equation

    <string name="TabeYekMajhuli">f(x)</string>
    <string name="TabeDoMajhuli">f(x,y)</string>
    <string name="TabeSeMajhuli">f(x,y,z)</string>
    <string name="X">x</string>
    <string name="Y">y</string>
    <string name="Z">z</string>
    <string name="MoshtagTabe">"f'("</string>
    <string name="vurudi">f(</string>
    <string name="Camma">,</string>
    <string name="QuestionMark">"?"</string>
    <string name="Angah"> → </string>
    <string name="Eequals">=</string>
    <string name="_0">0</string>
    <string name="notationFragmentTitle">Notation</string>
</resources>