<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/ClearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="ClearBtn"
                android:text="@string/clear"
                android:textColor="#FFF4AB41"
                android:textFontWeight="@android:integer/config_longAnimTime"
                android:textSize="25sp" />

            <Button
                android:id="@+id/PlusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="PlusMinusBtn"
                android:text="@string/PlusMinus"

                android:textSize="25sp" />

            <Button
                android:id="@+id/PercentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="PercentBtn"
                android:text="@string/percent"

                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/BackSpaceBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="BackSpaceBtn"
                android:text="@string/backspace"
                android:textSize="25sp"

                app:srcCompat="@drawable/ic_baseline_backspace_24" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/PlusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="PlusBtn"
                android:text="@string/plus"

                android:textSize="25sp" />

            <Button
                android:id="@+id/MinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="MinusBtn"
                android:text="@string/minus"

                android:textSize="25sp" />

            <Button
                android:id="@+id/MultiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="MultiplyBtn"
                android:text="@string/multiply"

                android:textSize="25sp" />

            <Button
                android:id="@+id/DivideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="DivideBtn"
                android:text="@string/divide"

                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="SevenBTN"
                android:text="@string/seven"


                android:textSize="25sp" />

            <Button
                android:id="@+id/EightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="EightBTN"
                android:text="@string/eight"
                android:textSize="25sp" />

            <Button
                android:id="@+id/NineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="NineBTN"
                android:text="@string/nine"

                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/FourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="FourBTN"
                android:text="@string/four"


                android:textSize="25sp" />

            <Button
                android:id="@+id/FiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="FiveBTN"
                android:text="@string/five"

                android:textSize="25sp" />

            <Button
                android:id="@+id/SixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="SixBTN"
                android:text="@string/six"


                android:textSize="25sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/OneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="OneBTN"
                android:text="@string/one"


                android:textSize="25sp" />

            <Button
                android:id="@+id/TwoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="TwoBTN"
                android:text="@string/two"

                android:textSize="25sp" />

            <Button
                android:id="@+id/ThreeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="ThreeBTN"
                android:text="@string/three"

                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ZeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="ZeroBTN"
                android:text="@string/zero"


                android:textSize="25sp" />

            <Button
                android:id="@+id/DotBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="DotBTN"
                android:text="@string/dot"

                android:textSize="25sp" />

            <Button
                android:id="@+id/EqualsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/buttuns"
                android:onClick="EqualsBTN"
                android:text="@string/equals"

                android:textSize="25sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>